tests/negative/semantic/array_insert_bool_into_string/input.ci
void main() {
    string[] xs = ["a"];
    arrayInsert(xs, 0, true);
}
